--- a/templates/admin/olympiads.html
+++ b/templates/admin/olympiads.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h2>Manage Olympiads</h2>
 
-<table>
+<div class="table-responsive"><table>
     <thead>
         <tr>
             <th>ID</th>
@@ -37,7 +37,7 @@
         </tr>
         {% endfor %}
     </tbody>
-</table>
+</table></div>
 
 <div id="edit-form" style="display: none;" class="card">
     <h3 id="form-title">Edit Olympiad</h3>
