--- a/templates/admin/sport_competitors.html
+++ b/templates/admin/sport_competitors.html
@@ -14,7 +14,7 @@
 </div>
 
 {% if competitors %}
-<table>
+<div class="table-responsive"><table>
     <thead>
         <tr>
             <th>Callsign</th>
@@ -49,7 +49,7 @@
         </tr>
         {% endfor %}
     </tbody>
-</table>
+</table></div>
 {% else %}
 <p>No competitors have entered this sport yet.</p>
 {% endif %}
