--- a/templates/sync.html
+++ b/templates/sync.html
@@ -26,7 +26,7 @@
         </table></div>
     {% else %}
         <div class="table-responsive"><table>
-            <tr><th>Competitors Synced</th><td>{{ result.contestants_synced }}</td></tr>
+            <tr><th>Competitors Synced</th><td>{{ result.competitors_synced }}</td></tr>
             <tr><th>Total New QSOs</th><td>{{ result.total_new_qsos }}</td></tr>
             <tr><th>Total Updated QSOs</th><td>{{ result.total_updated_qsos }}</td></tr>
         </table></div>
