--- a/templates/records.html
+++ b/templates/records.html
@@ -32,7 +32,7 @@
             </td>
             <td>
                 {% if record.holder %}
-                    <a href="/contestant/{{ record.holder }}">{{ record.holder }}</a>
+                    <a href="/competitor/{{ record.holder }}">{{ record.holder }}</a>
                 {% else %}
                     -
                 {% endif %}
